# Zif

./: package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json  zif.desktop
src-tauri/src/: main.rs
