[package]
name = "zif"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# CAMBIA ESTA LÍNEA (borra la anterior y pon esta):
tauri = { version = "1", features = [ "dialog-all"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
zstd = {version="0.13", features= ["zstdmt"] }
tar = "0.4"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
walkdir = "2.4"
winreg = "0.55.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
